# agriculture-chatbot

./: app.py  pyproject.toml  readme.md  setup.py  template.sh
research/: trials.ipynb
src/: helper.py  prompt.py
templates/: index.html
